# digivalidation

./: .gitignore  bb.edn  convert_raq_csv_to_json.py  layer-requirements.txt  output.json  pyproject.toml  risk_assessment_questions.csv  risk_assessment_questions.json
.github/data/: backend.hcl
.github/workflows/: tag.yml  terraform-apply.yml  terraform-plan.yml
.venv312/: pyvenv.cfg
docs/: README.md
lambdas/: 065339-15-02-2025-b-and-m-st-nicholas-hs-unit-b-st-nicholas-dr_tbp_v1_final.json  archive_viewer.py  asset_categorisation.py  basic_event.py  bedrock.py  blur_image.py  categorisation.py  checklist.py  checklist_proofing.py  config.py  db.py  digival.py  emails.py  fire_validation.py  fra_checklist_proofing.py  geocoding.py  hsa_checklist_proofing.py  llamaparse.py  nova_water.py  pdf_merge.py  pdf_qa.py  pdfqa_api  pdfqa_api.py  qa_photo_analysis.py  s3_file_viewer.py  salesforce_input.py  waterRiskCaseIngest.py
pymupdf/python/pymupdf-1.26.0.dist-info/: RECORD
pymupdf_layer/python/pymupdf-1.26.7.dist-info/: RECORD
scripts/: aws_auth.clj  boot_project.clj  build.clj  gh-workflows.clj
tests/: conftest.py  salesforce.json
tests/unit/: test_basic_event.py  test_saleforce_input1.py  test_salesforce_input.py
tf/: .terraform.lock.hcl  api.tf  backend-prod.hcl  dewrra_async.tf  dynamodb.tf  emails.tf  iam_klayers_access.tf  iam_llama_access.tf  iam_openai_access.tf  lambda-layer-zip.tf  lambda-s3-zip-bucket.tf  lambda_layer.tf  lambdas-zip.tf  llamaindex_layer.tf  locals.tf  module_bedrock_bucket.tf  s3_bucket.tf  secret_llama.tf  secret_openai.tf  sns.tf  terraform.tf  tfplan  variables.tf
tf/modules/lambda-layer/: main.tf  outputs.tf  variables.tf
tf/modules/lambdas-zip/: main.tf  outputs.tf  variables.tf
tf/modules/s3/: main.tf  outputs.tf  terraform.tf  variables.tf
workflows/: terraform-apply.yml  unit-test.yml
