[project]
version = "1.0.0"
name = "bedrock-lambda"
description = "Bedrock Lambda for MetroSafety"
authors = [
    { name = "MetroSafety", email = "luke.gasson@metrosafety.co.uk"},
]
readme = "README.md"
requires-python = ">= 3.13"
dependencies = [
    "bs4>=0.0.2",
    "pymupdf>=1.26.7",
    "pillow>=12.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
    "boto3>=1.37.1",
    "moto>=5.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytz>=2025.1",
    "openai>=2.15.0",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "cdk.out",
    ".vscode",
    ".pytest_cache",
    ".build",
    ".mypy_cache",
    ".github"
]

# Same as Black.
line-length = 160
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [ "E203", "E266", "E501", "W191"]

[tool.ruff.format]
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
known-third-party = ["pydantic", "aws_lambda_powertools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["lambdas", "tests/unit" ]

[tool.hatch.build.targets.wheel]
packages = ["lambdas"]

[tool.hatch.build]
skip-excluded-dirs = true
